[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player/Sword.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assetts/character_1.png" type="Texture" id=2]
[ext_resource path="res://Assetts/character_3.png" type="Texture" id=3]
[ext_resource path="res://Assetts/character_4.png" type="Texture" id=4]
[ext_resource path="res://Assetts/character_2.png" type="Texture" id=5]
[ext_resource path="res://Player/Player.gd" type="Script" id=6]
[ext_resource path="res://Assetts/hp_holder.png" type="Texture" id=7]
[ext_resource path="res://Assetts/hp_progress.png" type="Texture" id=8]
[ext_resource path="res://Assetts/Coin.png" type="Texture" id=9]
[ext_resource path="res://Fonts/Theme.theme" type="Theme" id=10]
[ext_resource path="res://Fonts/Big Pixel Light demo.otf" type="DynamicFontData" id=11]
[ext_resource path="res://Player/player_hit.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.01557
height = 10.1547

[sub_resource type="Animation" id=3]
resource_name = "damage"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="DynamicFont" id=4]
size = 6
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=5]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
collision_mask = 21
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 2
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sword" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 3 )

[node name="InvunerableTimer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
attenuation = 0.732043
bus = "SFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" type="TextureProgress" parent="CanvasLayer/UI"]
margin_left = 5.0
margin_right = 55.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 20 )
value = 60.0
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 5
stretch_margin_right = 1
stretch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="CanvasLayer/UI"]
margin_left = 5.36597
margin_top = 4.29277
margin_right = 55.366
margin_bottom = 16.2928
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 4 )
text = "2/10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI"]
margin_left = 207.614
margin_right = 247.614
margin_bottom = 17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer"]
margin_right = 16.0
margin_bottom = 17.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinAmount" type="Label" parent="CanvasLayer/UI/HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 17.0
text = "21"

[node name="Popup" type="Popup" parent="CanvasLayer"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.521569, 0.556863, 0.529412, 1 )

[node name="Label" type="Label" parent="CanvasLayer/Popup/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.02277
margin_right = 5.97723
custom_fonts/font = SubResource( 5 )
text = "You black out and find yourself at the 
start of your days journey, You also 
find you lost some of your gold,"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 5.0
[connection signal="timeout" from="InvunerableTimer" to="." method="_on_InvunerableTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]

[editable path="Sword"]
